--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,10 @@ dependencies:
   emoji_picker_flutter: ^1.3.0
   http: ^0.13.5
   html: ^0.15.1
-  any_link_preview: ^3.0.0
+  any_link_preview: 
+    git:
+      url: https://github.com/BichKhun/any_link_preview.git
+      ref: mirror/develop
   progress_indicators: ^1.0.0
   image_picker: ^0.8.6
   audio_waveforms: ^1.0.1
