--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ description: A Flutter package that allows you to integrate Chat View with highl
 version: 1.2.1
 issue_tracker: https://github.com/SimformSolutionsPvtLtd/flutter_chatview/issues
 repository: https://github.com/SimformSolutionsPvtLtd/flutter_chatview
+publish_to: none
 
 platforms:
   android:
@@ -35,10 +36,16 @@ dependencies:
   # For formatting time locale in message receipts
   timeago: ^3.4.0
 
+  logic_module:
+    path: ../flutter_module/logic_module
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
 
 flutter:
+  assets:
+    - images/
+
 
