so-business-15538 [Story] 【IM】桌面端支持文本、表情、超链接、引用、回复非资源类消息收发

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
 
   logic_module:
     path: ../flutter_module/logic_module
+  chat:
+    path: ../flutter_module/logic_modules/chat
 
 dev_dependencies:
   flutter_test:
