--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
     path: ../flutter_module/logic_module
   chat:
     path: ../flutter_module/logic_modules/chat
+  util:
+    path: ../flutter_module/logic_modules/util
 
 dev_dependencies:
   flutter_test:
